--- a/web.html
+++ b/web.html
@@ -6,8 +6,8 @@
 <body style="background-color: lightgray;">
 	<center>
 		<h1 style="text-align: left">My_first_task</h1>	
-		<h2>The topic i learn of aws cloud under teaching of the world record holder "Vimal daga" sir and under team of Linux World</h2>
 	        <img src= "https://github.com/yashdevale/cloud_task1/blob/master/acr.jpg" width="250px;" height="250px;">
+		<h2>Thank You!</h2>
 	
 		
 		<p>
